--- a/views/layout.njk
+++ b/views/layout.njk
@@ -9,13 +9,17 @@
    </head>
    <body>
       <header>
-         <ul>
-            <li><a href="/">Teachers</a></li>
-            <li><a href="/teachers/create">Students</a></li>
-         </ul>
+         <div class="links">
+            <ul>
+               <li><a href="/teachers">Teachers</a></li>
+               <li><a href="/students">Students</a></li>
+            </ul>
+         </div>
       </header>
       <main>
          {% block content %}{% endblock content %}
       </main>
+
+      <script src="../script.js"></script>
    </body>
 </html>
