--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -10,7 +10,7 @@
     <thead>
       <tr>        
         <th>Instrutor</th>
-        <th>Atendimento</th>
+        <th>Matérias</th>
         <th>Ação</th>
       </tr>
     </thead>
@@ -25,7 +25,7 @@
             {{teacher.nome}}
           </td>
 
-          <td data-label="Atendimento"> {{teacher.materia}} </td>
+          <td data-label="Matérias"> {{teacher.materia}} </td>
 
           <td><a href="/teachers/{{teacher.id}}">ver</a></td>
 
