--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -22,10 +22,10 @@
           
           <td>
             <span style="background-image:url({{teacher.avatar_url}})"></span>
-            {{teacher.nome}}
+            {{teacher.name}}
           </td>
 
-          <td data-label="Matérias"> {{teacher.materia}} </td>
+          <td data-label="Matérias"> {{teacher.class_type}} </td>
 
           <td><a href="/teachers/{{teacher.id}}">ver</a></td>
 
