--- a/src/app/views/teachers/edit.njk
+++ b/src/app/views/teachers/edit.njk
@@ -23,7 +23,7 @@
 
       </form>
 
-      <form id="form_delete" action="/instrutores?_method=DELETE" method="post">
+      <form id="form_delete" action="/teachers?_method=DELETE" method="post">
 
         <input type="hidden" name="id" value={{teacher.id}}>
         <button type="submit">DELETAR</button>
