--- a/src/app/views/teachers/fields.njk
+++ b/src/app/views/teachers/fields.njk
@@ -26,32 +26,32 @@
   <div>
     <input 
       type="date" 
-      name="birth" 
-      value="{{ teacher.birth }}">
+      name="birth_date" 
+      value="{{ teacher.birth_date }}">
   </div>
 </div>
 
 <div class="item">
   <div>Graduação</div>
   <div>
-     <select name="education">
-         <option value="Superior" {% if teacher.education=="Superior" %} selected {% endif %}>
+     <select name="education_level">
+         <option value="Superior" {% if teacher.education_level=="Superior" %} selected {% endif %}>
             Superior
          </option>
 
-         <option value="Pós-graduação" {% if teacher.education=="Pós-graduação" %} selected {% endif %}>
+         <option value="Pós-graduação" {% if teacher.education_level=="Pós-graduação" %} selected {% endif %}>
             Pós-graduação
          </option>
 
-         <option value="Mestrado" {% if teacher.education=="Mestrado" %} selected {% endif %}>
+         <option value="Mestrado" {% if teacher.education_level=="Mestrado" %} selected {% endif %}>
             Mestrado
          </option>
 
-         <option value="Especialista" {% if teacher.education=="Especialista" %} selected {% endif %}>
+         <option value="Especialista" {% if teacher.education_level=="Especialista" %} selected {% endif %}>
             Especialista
          </option>
 
-         <option value="Doutorado" {% if teacher.education=="Doutorado" %} selected {% endif %}>
+         <option value="Doutorado" {% if teacher.education_level=="Doutorado" %} selected {% endif %}>
             Doutorado
          </option>
       </select>
@@ -64,8 +64,27 @@
     <input 
     type="text" 
     name="class_type" 
-    placeholder="Separe o Serviço por virgula"
+    placeholder="Separe as matérias por vírgula"
     value="{{ teacher.class_type }}">
+  </div>
+</div>
+
+<div class="item">
+  <div>Modalidade</div>
+  <div>
+     <select name="subjects_taught">
+         <option value="Presencial" {% if teacher.subjects_taught=="Presencial" %} selected {% endif %}>
+            Presencial
+         </option>
+
+         <option value="Semi-Presencial" {% if teacher.subjects_taught=="Semi-Presencial" %} selected {% endif %}>
+            Semi-Presencial
+         </option>
+
+         <option value="Ead" {% if teacher.subjects_taught=="EaD" %} selected {% endif %}>
+            EaD
+         </option>
+      </select>
   </div>
 </div>
 
