TypeError: Cannot read properties of undefined (reading 'content-type')

--- a/src/app/views/teachers/edit.njk
+++ b/src/app/views/teachers/edit.njk
@@ -15,7 +15,7 @@
 
       <form method="POST" action="/teachers?_method=PUT">
 
-        <h3>Editar Instrutor</h3>
+        <h3>Editar Professor</h3>
 
           {% include 'teachers/fields.njk' %}
 
