--- a/src/app/views/teachers/show.njk
+++ b/src/app/views/teachers/show.njk
@@ -29,7 +29,7 @@
       </div>
 
       <div class="item">
-        <div>Graduação</div>
+        <div>Matérias</div>
         <div>          
           
           <span>{{ teacher.subjects_taught }}</span>           
