--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -20,6 +20,6 @@
          {% block content %}{% endblock content %}
       </main>
 
-      <script src="../script.js"></script>
+      <script src="/script.js"></script>
    </body>
 </html>
