--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -39,6 +39,11 @@
       </div>
 
       <div class="item">
+        <div>Professor</div>
+        <div>{{student.teacher_name}}</div>        
+      </div>
+
+      <div class="item">
         <div>Modalidade</div>
         <div>{{student.subjects_taught}}</div>        
       </div>
