--- a/src/app/views/students/edit.njk
+++ b/src/app/views/students/edit.njk
@@ -15,7 +15,7 @@
 
       <form method="POST" action="/students?_method=PUT">
 
-        <h3>Editar Membro</h3>
+        <h3>Editar Aluno</h3>
 
           {% include 'students/fields.njk' %}
 
