--- a/src/app/views/students/index.njk
+++ b/src/app/views/students/index.njk
@@ -7,43 +7,61 @@
 {% block content %}
 
   <div class="card tabela-conteiner">
+
+    <div class="header">
+
+      <a class="button" href="/students/create">Novo</a>
+
+      <form action="/students" method="GET">
+        <input 
+          type="text" 
+          name="filter" 
+          placeholder=" Ex: Nome, Atividade"
+          value={{filter}}>
+        <button type="submit">Pesquisar</button>
+      </form>
+
+    </div>
   
-  <table width="100%">
-    <a href="/students/create">Novo</a>
-    <!--CABEÇALHO DA TABELA-->
-    <thead>
-      <tr>        
-        <th>Aluno</th>
-        <th>Email</th>
-        <th>Celular</th>
-        <th>Série</th>
-        <th>Ação</th>
-      </tr>
-    </thead>
-    <!--CORPO DA TABELA-->
-    <tbody>
-      {% for student in students %}
-
-        <tr>
-          
-          <td>
-            <span style="background-image:url({{student.avatar_url}})"></span>
-           
-            {{student.name}}
-          </td>
-          <td data-label="EMAIL">{{student.email_student}}</td>
-          <td data-label="CELULAR">{{student.phone}}</td>
-          <td data-label="SÉRIE">{{student.education_level}}</td>
-          
-          
-          <td><a href="/students/{{student.id}}">ver</a></td>
+    <table width="100%">      
+      <!--CABEÇALHO DA TABELA-->
+      <thead>
+        <tr>        
+          <th>Aluno</th>
+          <th>Email</th>
+          <th>Celular</th>
+          <th>Série</th>
+          <th>Ação</th>
         </tr>
+      </thead>
 
-      {% endfor %}
+      <!--CORPO DA TABELA-->
+      <tbody>
+        {% for student in students %}
 
-    </tbody>
+          <tr>
+            
+            <td>
+              <span style="background-image:url({{student.avatar_url}})"></span>
+            
+              {{student.name}}
+            </td>
+            <td data-label="EMAIL">{{student.email_student}}</td>
+            <td data-label="CELULAR">{{student.phone}}</td>
+            <td data-label="SÉRIE">{{student.education_level}}</td>
+            <td><a href="/students/{{student.id}}">ver</a></td>
+          </tr>
 
-  </table>  
+        {% endfor %}
+
+      </tbody>
+    </table>
+
+    <div class="pagination"
+        data-page={{pagination.page}}
+        data-total={{pagination.total}}
+        data-filter={{filter}}>        
+    </div> 
     
   </div>
   
