--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -2,40 +2,65 @@
 
 {% block content %}
 
-  <div class="card tabela-conteiner">
+  <div class="card tabela-conteiner">   
+
+    <div class="header">
+
+      <a class="button" href="/teachers/create">Novo</a>
+
+      <form action="/teachers" method="GET">
+        <input 
+          type="text" 
+          name="filter" 
+          placeholder=" Ex: Nome, Atividade"
+          value={{filter}}>
+        <button type="submit">Pesquisar</button>
+      </form>
+
+    </div> 
   
-  <table width="100%">
-    <a href="/teachers/create">Novo</a>
-    <!--CABEÇALHO DA TABELA-->
-    <thead>
-      <tr>        
-        <th>Instrutor</th>
-        <th>Matérias</th>
-        <th>Ação</th>
-      </tr>
-    </thead>
-    <!--CORPO DA TABELA-->
-    <tbody>
-      {% for teacher in teachers %}
-
-        <tr>
-          
-          <td>
-            <span style="background-image:url({{teacher.avatar_url}})"></span>
-            {{teacher.name}}
-          </td>
-
-          <td data-label="Matérias"> {{teacher.class_type}} </td>
-
-          <td><a href="/teachers/{{teacher.id}}">ver</a></td>
-
+    <table width="100%">
+      <a href="/teachers/create">Novo</a>
+      <!--CABEÇALHO DA TABELA-->
+      <thead>
+        <tr>        
+          <th>Professor</th>
+          <th>Matérias</th>
+          <th>Alunos</th>
+          <th>Ação</th>
         </tr>
+      </thead>
+      <!--CORPO DA TABELA-->
+      <tbody>
+        {% for teacher in teachers %}
 
-      {% endfor %}
+          <tr>
+            
+            <td>
+              <span style="background-image:url({{teacher.avatar_url}})"></span>
+              {{teacher.name}}
+            </td>
 
-    </tbody>
+            <td data-label="Matérias"> {{teacher.class_type}} </td>
 
-  </table>  
+             <td data-label="Alunos"> {{teacher.total_students}} </td>
+
+            <td><a href="/teachers/{{teacher.id}}">ver</a></td>
+
+          </tr>
+
+        {% endfor %}
+
+      </tbody>
+
+    </table>
+
+    <div class="pagination"
+        data-page={{pagination.page}}
+        data-total={{pagination.total}}
+        data-filter={{filter}}>
+        
+    </div>
     
   </div>
   
