--- a/src/app/views/teachers/show.njk
+++ b/src/app/views/teachers/show.njk
@@ -29,18 +29,23 @@
       </div>
 
       <div class="item">
-        <div>Matérias</div>
-        <div>          
-          
-          <span>{{ teacher.subjects_taught }}</span>           
-                
+        <div>Modalidade</div>
+        <div>   
+          <span>{{ teacher.subjects_taught }}</span>    
         </div>
       </div>
 
-         <div class="item">
+      <div class="item">
         <div>Matérias</div>
         <div>
            {{ teacher.class_type }}        
+        </div>
+      </div>
+
+      <div class="item">
+        <div>Total de alunos</div>
+        <div>
+           {{ teacher.total_students }}        
         </div>
       </div>
 
