--- a/src/app/views/teachers/edit.njk
+++ b/src/app/views/teachers/edit.njk
@@ -26,7 +26,7 @@
       <form id="form_delete" action="/teachers?_method=DELETE" method="post">
 
         <input type="hidden" name="id" value={{teacher.id}}>
-        <button type="submit">DELETAR</button>
+        <button class="button" type="submit">DELETAR</button>
 
       </form>
 
