--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-  <div class="card tabela-conteiner">   
+  <div class="card table-container">   
 
     <div class="header">
 
-      <a class="button" href="/teachers/create">Novo</a>
+      <a class="btn new" href="/teachers/create">Novo</a>
 
       <form action="/teachers" method="GET">
         <input 
@@ -20,7 +20,7 @@
     </div> 
   
     <table width="100%">
-      <a href="/teachers/create">Novo</a>
+      
       <!--CABEÇALHO DA TABELA-->
       <thead>
         <tr>        
