--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -4,17 +4,26 @@
       <meta charset="UTF-8"/>
       <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <link rel="stylesheet" href="/main.css"/>
+
+      <!--Google Fonts-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,300&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+      <!--Style-->
+      {# <link rel="stylesheet" href="/scss/main.css"/> #}
+      <link rel="stylesheet" href="/scss/main.css"/>
+      
       <title>Aulas particulares</title>
    </head>
    <body>
       <header>
-         <div class="links">
+         <nav class="links">
             <ul>
                <li><a href="/teachers">Teachers</a></li>
                <li><a href="/students">Students</a></li>
             </ul>
-         </div>
+         </nav>
       </header>
       <main>
          {% block content %}{% endblock content %}
