--- a/src/app/views/students/fields.njk
+++ b/src/app/views/students/fields.njk
@@ -19,9 +19,9 @@
   <div>
     <input 
       type="text" 
-      name="name" id="" 
+      name="name_student" id="" 
       required
-      value="{{ student.name }}"
+      value="{{ student.name_student }}"
     >
   </div>
 
