--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -1,143 +1,4 @@
 @charset "UTF-8";
-@media screen and (max-width: 768px) {
-  .table-container {
-    width: auto;
-  }
-  .table-container table {
-    font-weight: 400;
-    min-width: 300px;
-    width: 100%;
-  }
-  .table-container table thead {
-    display: none;
-    font-weight: 500;
-  }
-  .table-container table tbody tr {
-    border: 1px solid #dad6eb;
-    border-radius: 5px;
-    display: block;
-    padding: 30px;
-    margin-bottom: 30px;
-  }
-  .table-container table tbody tr td {
-    display: block;
-    font-weight: 500;
-    padding: 5px;
-    position: relative;
-    text-align: right;
-    /* Alinha uma a imagem em cima do texto
-            dentro da cedula usuário para o preenchimento da imagem */
-  }
-  .table-container table tbody tr td:first-child {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    font-size: 1.5rem;
-    text-align: center;
-    margin-bottom: 0.5em;
-    border-bottom: 1px solid #777;
-    /* Adiciona a imagem com formato retangular e sombreamento */
-  }
-  .table-container table tbody tr td:first-child span {
-    width: 100%;
-    height: 15vh;
-    border-radius: 0.1px;
-  }
-  .table-container table tbody tr td::after {
-    color: #8a8a87;
-    content: attr(data-label);
-    font-weight: 400;
-    left: 5px;
-    position: absolute;
-  }
-  .table-container table tbody tr td a {
-    -webkit-box-shadow: 0 4px 8px rgba(34, 34, 34, 0.2);
-            box-shadow: 0 4px 8px rgba(34, 34, 34, 0.2);
-    bottom: -30px;
-    left: 50%;
-    text-align: center;
-    position: absolute;
-    -webkit-transform: translate(-50%, 50%);
-            transform: translate(-50%, 50%);
-    -webkit-transition: background 0.12s ease-out;
-    transition: background 0.12s ease-out;
-    width: 50%;
-  }
-  /* Alterando o comportamento do card */
-  .card {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    width: 80%;
-  }
-  .details {
-    width: 100%;
-  }
-  .avatar {
-    width: auto;
-    height: 50vh;
-    border-radius: 16px 16px 0 0;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .table-container {
-    width: 400px;
-  }
-}
-
-button[type='submit'],
-a.button {
-  padding: 8px 20px;
-  background-color: var(--color-secondary);
-  border-radius: 4px;
-  color: var(--color-text-white);
-  margin-top: 32px;
-  width: 100%;
-  font-size: 16px;
-}
-
-a.button {
-  display: block;
-  text-align: center;
-}
-
-/* botão DELETE */
-#form_delete button[type='submit'] {
-  margin-top: 8px;
-  background-color: var(--color-btn-delete);
-}
-
-input {
-  width: 100%;
-  color: var(--color-text-grayStrong);
-  font-weight: 700;
-  font-size: 18px;
-}
-
-input::-webkit-input-placeholder {
-  font-size: 16px;
-  font-weight: normal;
-}
-
-input:-ms-input-placeholder {
-  font-size: 16px;
-  font-weight: normal;
-}
-
-input::-ms-input-placeholder {
-  font-size: 16px;
-  font-weight: normal;
-}
-
-input::placeholder {
-  font-size: 16px;
-  font-weight: normal;
-}
-
-input[type='radio'] {
-  width: initial;
-  margin-right: 4px;
-}
-
 /* variaveis padrão */
 :root {
   --color-main: #141412;
@@ -306,6 +167,7 @@ header nav .active {
   max-width: 890px;
   text-align: left;
   width: 100%;
+  margin-bottom: 50px;
   /* Fonte responsiva */
 }
 
@@ -437,5 +299,174 @@ header nav .active {
 
 .table-container .header form button {
   margin: 0;
+}
+
+.table-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 67px 1fr 16px;
+  -ms-grid-columns: 1fr;
+      grid-template: 67px 1fr 16px / 1fr;
+}
+
+.table-container .pagination {
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.table-container .pagination a,
+.table-container .pagination span {
+  color: var(--color-secondary);
+  text-decoration: none;
+  margin-right: 12px;
+}
+
+.table-container .pagination a:hover,
+.table-container .pagination span:hover {
+  -webkit-filter: brightness(0.3);
+          filter: brightness(0.3);
+  border-bottom: 1px solid var(--color-main2);
+}
+
+button[type='submit'],
+a.button {
+  padding: 8px 20px;
+  background-color: var(--color-secondary);
+  border-radius: 4px;
+  color: var(--color-text-white);
+  margin-top: 32px;
+  width: 100%;
+  font-size: 16px;
+}
+
+a.button {
+  display: block;
+  text-align: center;
+}
+
+/* botão DELETE */
+#form_delete button[type='submit'] {
+  margin-top: 8px;
+  background-color: var(--color-btn-delete);
+}
+
+input {
+  width: 100%;
+  color: var(--color-text-grayStrong);
+  font-weight: 700;
+  font-size: 18px;
+}
+
+input::-webkit-input-placeholder {
+  font-size: 16px;
+  font-weight: normal;
+}
+
+input:-ms-input-placeholder {
+  font-size: 16px;
+  font-weight: normal;
+}
+
+input::-ms-input-placeholder {
+  font-size: 16px;
+  font-weight: normal;
+}
+
+input::placeholder {
+  font-size: 16px;
+  font-weight: normal;
+}
+
+input[type='radio'] {
+  width: initial;
+  margin-right: 4px;
+}
+
+@media screen and (max-width: 768px) {
+  .table-container {
+    width: auto;
+  }
+  .table-container table {
+    font-weight: 400;
+    min-width: 300px;
+    width: 100%;
+  }
+  .table-container table thead {
+    display: none;
+    font-weight: 500;
+  }
+  .table-container table tbody tr {
+    border: 1px solid #dad6eb;
+    border-radius: 5px;
+    display: block;
+    padding: 30px;
+    margin-bottom: 30px;
+  }
+  .table-container table tbody tr td {
+    display: block;
+    font-weight: 500;
+    padding: 5px;
+    position: relative;
+    text-align: right;
+    /* Alinha uma a imagem em cima do texto
+            dentro da cedula usuário para o preenchimento da imagem */
+  }
+  .table-container table tbody tr td:first-child {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 0.5em;
+    border-bottom: 1px solid #777;
+    /* Adiciona a imagem com formato retangular e sombreamento */
+  }
+  .table-container table tbody tr td:first-child span {
+    width: 100%;
+    height: 15vh;
+    border-radius: 0.1px;
+  }
+  .table-container table tbody tr td::after {
+    color: #8a8a87;
+    content: attr(data-label);
+    font-weight: 400;
+    left: 5px;
+    position: absolute;
+  }
+  .table-container table tbody tr td a {
+    -webkit-box-shadow: 0 4px 8px rgba(34, 34, 34, 0.2);
+            box-shadow: 0 4px 8px rgba(34, 34, 34, 0.2);
+    bottom: -30px;
+    left: 50%;
+    text-align: center;
+    position: absolute;
+    -webkit-transform: translate(-50%, 50%);
+            transform: translate(-50%, 50%);
+    -webkit-transition: background 0.12s ease-out;
+    transition: background 0.12s ease-out;
+    width: 50%;
+  }
+  /* Alterando o comportamento do card */
+  .card {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    width: 80%;
+  }
+  .details {
+    width: 100%;
+  }
+  .avatar {
+    width: auto;
+    height: 50vh;
+    border-radius: 16px 16px 0 0;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .table-container {
+    width: 400px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
