--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -15,7 +15,7 @@
 
       <div class="item">
         <div>Aluno</div>
-        <div>{{student.name}}</div>        
+        <div>{{student.name_student}}</div>        
       </div>
 
       <div class="item">
