bug com filter resolvido

--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -12,7 +12,7 @@
         <input 
           type="text" 
           name="filter" 
-          placeholder=" Ex: Nome, Atividade"
+          placeholder=" Ex: Nome, Matéria"
           value={{filter}}>
         <button type="submit">Pesquisar</button>
       </form>
